Added secrets as env vars

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
       - created
 jobs:
   release:
+    env:
+      - DOCKER_USER: ${{ secrets.DOCKER_USER }}
+      - DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
