--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,5 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
       - run: docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" registry-1.docker.io
       - run: make publish
