--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.16
-      - run: docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" registry-1.docker.io
+      - run: docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
       - run: make publish
